--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-BOT_CLIENT_ID="<YOUR_BOT_CLIENT_ID>"
-BOT_CLIENT_SECRET="<YOUR_BOT_CLIENT_SECRET>"
+BOT_CLIENT_ID="<1290328015821082654>"
+BOT_CLIENT_SECRET="<xgMZoQuaxf6NMWIfIeVHgV7ORxEGNeqJ>"
 
 # The absolute url of the dashboard (Production)
-APP_URL="http://localhost:3000"
+APP_URL="https://discord.com/oauth2/authorize?client_id=1290328015821082654&permissions=8&integration_type=0&scope=bot"
 
 # The absolute url of the api endpoint of your bot (Production)
 NEXT_PUBLIC_API_ENDPOINT="http://localhost:8080"
